# rust-ds

./: .gitignore  CODE_REVIEW.md  CUSTOMIZATION_ROADMAP.md  Cargo.toml  DOCUMENTATION.md  Dioxus.toml  GITHUB_PAGES_DEPLOYMENT.md  GITIGNORE_GUIDE.md  MOBILE_SETUP.md  PROJECT_STRUCTURE.md  PUBLISHING.md  PUBLISH_CHECKLIST.md  README.md
.cargo/: config.toml
.github/workflows/: deploy.yml
dioxus-ui-system/: Cargo.toml  LICENSE-APACHE
dioxus-ui-system/src/: config.rs  lib.rs
dioxus-ui-system/src/atoms/: aspect_ratio.rs  box_component.rs  button.rs  checkbox.rs  date_picker.rs  divider.rs  heading.rs  icon.rs  input.rs  label.rs  mod.rs  number_input.rs  password_input.rs  progress.rs  radio.rs  rating.rs  select.rs  skeleton.rs  slider.rs  spinner.rs  step.rs  switch.rs  tag.rs  textarea.rs  toggle.rs
dioxus-ui-system/src/molecules/: alert.rs  avatar.rs  badge.rs  breadcrumb.rs  card.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  dialog.rs  dropdown_menu.rs  hover_card.rs  input_group.rs  list_item.rs  media_object.rs  mod.rs  multi_select.rs  otp_input.rs  pagination.rs  popover.rs  qr_code.rs  scroll_area.rs  separator.rs  sheet.rs  skeleton.rs  sonner.rs  stepper.rs  time_picker.rs  toast.rs  toggle_group.rs  tooltip.rs
dioxus-ui-system/src/organisms/: accordion.rs  calendar.rs  cards.rs  carousel.rs  confirmation_dialog.rs  data_table.rs  date_range_picker.rs  file_upload.rs  footer.rs  header.rs  hero.rs  image_uploader.rs  kanban.rs  layout.rs  menubar.rs  mod.rs  notification_center.rs  resizable.rs  rich_text.rs  stepper.rs  tabs.rs  timeline.rs  tour.rs  tree.rs
dioxus-ui-system/src/organisms/charts/: bar_chart.rs  common.rs  line_chart.rs  mod.rs  pie_chart.rs  sparkline.rs
dioxus-ui-system/src/styles/: builder.rs  mod.rs
dioxus-ui-system/src/theme/: context.rs  mod.rs  tokens.rs
docs/: 404.html  CNAME  Cargo.toml  Dioxus.toml  README.md  build.sh  index.html  release
docs-app/: Cargo.toml  DEPLOY.md  Dioxus.toml  build.sh
docs-app/src/: main.rs
docs-app/src/components/: atoms.rs  atoms_new.rs  mod.rs  molecules.rs  molecules_new.rs  organisms.rs  organisms_new.rs
docs-app/src/docs_ui/: code_block.rs  doc_page.rs  example_box.rs  mod.rs  props_table.rs  section.rs
docs-app/src/guides/: mod.rs
docs-app/src/themes/: mod.rs
docs/assets/: dioxus-ui-docs-dxh103c3b2ffca4b46d.js  dioxus-ui-docs-dxh1c82587e280e7a2.js  dioxus-ui-docs-dxh1d19162a06c5df1.js  dioxus-ui-docs-dxh1e69dd42c8eb66e7.js  dioxus-ui-docs-dxh23aa23dac8743ba2.js  dioxus-ui-docs-dxh246bd6a03d1d924d.js  dioxus-ui-docs-dxh28ed3cb7420cf2c.js  dioxus-ui-docs-dxh2c6f53aff077a0e2.js  dioxus-ui-docs-dxh2c9f4a3a75789b3.js  dioxus-ui-docs-dxh2df6bdaac2c96feb.js  dioxus-ui-docs-dxh2eb5c1909fbef5f0.js  dioxus-ui-docs-dxh2eed64c2d7320f9.js  dioxus-ui-docs-dxh309f9d6ca22e3ca6.js  dioxus-ui-docs-dxh34b6a2ebdf5aefdb.js  dioxus-ui-docs-dxh3587a5ce138baf.js  dioxus-ui-docs-dxh374c145445c0efb7.js  dioxus-ui-docs-dxh38d25c927a69341.js  dioxus-ui-docs-dxh39fb86c5320b820.js  dioxus-ui-docs-dxh3a9e19fc9fc5bb.js  dioxus-ui-docs-dxh3cd5b31eb667a84.js  dioxus-ui-docs-dxh4292d8d372e88a.js  dioxus-ui-docs-dxh4299fc6e62658e83.js  dioxus-ui-docs-dxh44dad05a47cf4274.js  dioxus-ui-docs-dxh46d98b4ad9e2523.js  dioxus-ui-docs-dxh4a46275be1775fed.js  dioxus-ui-docs-dxh4df6e813151d5fe.js  dioxus-ui-docs-dxh53f52975fee313ec.js  dioxus-ui-docs-dxh58ffcf7741a87b0.js  dioxus-ui-docs-dxh59976f67be188bbe.js  dioxus-ui-docs-dxh5a4715917682d2.js  dioxus-ui-docs-dxh5a57efcf622ae3f5.js  dioxus-ui-docs-dxh5d3c52587b91a92b.js  dioxus-ui-docs-dxh62211fbd36dadc1.js  dioxus-ui-docs-dxh627642bc391bff.js  dioxus-ui-docs-dxh694d6956ed19b6c4.js  dioxus-ui-docs-dxh695e637ebf865c70.js  dioxus-ui-docs-dxh6bcde681f1a99830.js  dioxus-ui-docs-dxh6c25be224789183.js  dioxus-ui-docs-dxh6cecee3a881185a0.js  dioxus-ui-docs-dxh6e80b99a78d537ae.js  (+124 more)
docs/src/: main.rs
docs/src/components/: atoms.rs  mod.rs
docs/src/themes/: mod.rs
examples/: README.md  build-and-run-ios.sh  check-ios-app.sh  check-mobile-setup.sh  check-setup.sh  create-ios-simulator.sh  debug-ios.sh  fix-ios-simulator.sh  run-desktop.sh  run-ios-sim-uuid.sh  run-ios-sim.sh  run-mobile-android.sh  run-mobile-ios.sh  run-web-csr.sh  run-web-ssr.sh  view-ios-logs.sh
examples/desktop/: .gitignore  Cargo.toml
examples/desktop/src/: main.rs
examples/mobile/: .gitignore  Cargo.toml  IOS_THEME_ISSUE.md  IOS_TROUBLESHOOTING.md  README.md
examples/mobile/src/: main.rs
examples/shared/: Cargo.toml
examples/shared/src/: layout_showcase.rs  lib.rs
examples/web-csr/: .gitignore  Cargo.toml  README.md
examples/web-csr/src/: main.rs
examples/web-ssr/: Cargo.toml  README.md
examples/web-ssr/src/: main.rs
scripts/: publish.sh
