[package]
name = "dioxus-ui-system"
version = "0.0.1"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A pure Rust design system for Dioxus with Atomic Design principles"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/dioxus-ui-system"
keywords = ["dioxus", "ui", "design-system", "components", "rust"]
categories = ["gui", "web-programming", "wasm"]
rust-version = "1.70"
readme = "README.md"

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[lib]
name = "dioxus_ui_system"
path = "src/lib.rs"
