[package]
name = "dioxus-ui-system"
version = "0.0.4"
edition = "2021"
authors = ["Esteban Puello <eftech93@gmail.com>"]
description = "A pure Rust design system for Dioxus with Atomic Design principles"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eftech93/rust-ds"
keywords = ["dioxus", "ui", "design-system", "components", "rust"]
categories = ["gui", "web-programming", "wasm"]
rust-version = "1.70"
readme = "README.md"

[dependencies]
dioxus = { version = "0.6", features = ["router"] }
serde = { version = "1.0", features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[lib]
name = "dioxus_ui_system"
path = "src/lib.rs"
