[package]
name = "dioxus-ui-system"
version = "0.0.4"
edition = "2021"
authors = ["Esteban Puello <eftech93@gmail.com>"]
description = "A pure Rust design system for Dioxus with Atomic Design principles"
license = "MIT OR Apache-2.0"
repository = "https://github.com/eftech93/rust-ds"
keywords = ["dioxus", "ui", "design-system", "components", "rust"]
categories = ["gui", "web-programming", "wasm"]
rust-version = "1.70"
readme = "README.md"

[dependencies]
dioxus = { version = "0.7", default-features = false, features = ["signals", "macro", "hooks", "html"] }
dioxus-router = { version = "0.7", optional = true }
serde = { version = "1.0", features = ["derive"] }
web-sys = { version = "0.3", features = ["Storage", "Window"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
js-sys = { version = "0.3", optional = true }

[features]
default = ["web"]
web = ["dioxus/web", "dep:web-sys", "dep:wasm-bindgen", "dep:wasm-bindgen-futures", "dep:js-sys"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
router = ["dep:dioxus-router"]

[lib]
name = "dioxus_ui_system"
path = "src/lib.rs"
