[package]
name = "example-web-csr"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
dioxus-ui-system = { path = "../../dioxus-ui-system" }
example-shared = { path = "../shared" }

tracing = "0.1"

[features]
default = ["web"]
web = ["dioxus/web", "dioxus-ui-system/web", "example-shared/web"]
